package baralho;
public interface BaralhoInterface {
    void shuffle();

    Carta dealCard();

    int size();

    boolean hasCard();
}
