@startuml Baralho

interface BaralhoInterface {
    + shuffle()
    + dealCard(): Carta
    + size(): int
    + hasCard(): boolean
}

class Baralho {
    - List<Carta> deck
    - int NUMBER_OF_CARDS
    + shuffle()
    + dealCard(): Carta
    + size(): int
    + hasCard(): boolean
}

class BaralhoUno {
    - List<Carta> deck
    - int NUMBER_OF_CARDS
    + shuffle()
    + dealCard(): Carta
    + size(): int
    + hasCard(): boolean
}

class Carta {
    - String face
    - String naipe
    - Cor cor
    - int valor
    + getFace(): String
    + getNaipe(): String
    + getCor(): Cor
    + getValor(): int
    + toString(): String
}

enum Cor {
    + VERMELHO
    + PRETO
    + RESET
}

abstract class BaralhoFactory {
    + criarBaralho(): BaralhoInterface
}

class BaralhoTradicionalFactory {
    + criarBaralho(): BaralhoInterface
}

class BaralhoUnoFactory {
    + criarBaralho(): BaralhoInterface
}

BaralhoInterface <|.. Baralho
BaralhoInterface <|.. BaralhoUno
BaralhoFactory <|-- BaralhoTradicionalFactory
BaralhoFactory <|-- BaralhoUnoFactory
Baralho .. Carta
BaralhoUno .. Carta

@enduml
